[build-system]
requires = [
	"setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-unikorn-openstack-policy"
description = "Unikorn OpenStack Policy Generator"
version = "0.1.0"
readme = "README.md"
authors = [
	{ name="The Unikorn Cloud Team" }
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
	"cinder",
	"neutron",
	"nova",
	"oslo.config",
]

[project.urls]
homepage = "https://github.com/unikorn-cloud/python-unikorn-openstack-policy"

[project.entry-points."oslo.policy.policies"]
unikorn_openstack_policy_blockstorage = "unikorn_openstack_policy.blockstorage:list_rules"
unikorn_openstack_policy_compute = "unikorn_openstack_policy.compute:list_rules"
unikorn_openstack_policy_network = "unikorn_openstack_policy.network:list_rules"

[project.entry-points."oslo.policy.enforcer"]
unikorn_openstack_policy_blockstorage = "unikorn_openstack_policy.blockstorage:get_enforcer"
unikorn_openstack_policy_compute = "unikorn_openstack_policy.compute:get_enforcer"
unikorn_openstack_policy_network = "unikorn_openstack_policy.network:get_enforcer"

# vi: ts=4 noet:
